--- a/elasticsearch/Dockerfile
+++ b/elasticsearch/Dockerfile
@@ -1,12 +1,15 @@
 FROM resin/rpi-raspbian:latest
 
+# Update and install Java
+RUN apt-get update && apt-get install default-jre
+
 # Install Elasticsearch.
-RUN apt-get update \
-  && apt-get install default-jre \
-  && mkdir /usr/share/elasticsearch \
-  && wget https://packages.elastic.co/GPG-KEY-elasticsearch -O /usr/share/elasticsearch/GPG-KEY-elasticsearch \
-  && sudo apt-get install elasticsearch \
-  && rm -rf /tmp/* \
+RUN mkdir /usr/share/elasticsearch \
+  && curl -o /usr/share/elasticsearch/GPG-KEY-elasticsearch https://packages.elastic.co/GPG-KEY-elasticsearch \
+  && sudo apt-get install elasticsearch
+
+# Cleanup the apt-get cache
+RUN rm -rf /tmp/* \
   && apt-get autoremove --purge -y && \
   apt-get clean && \
   rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
