--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,6 @@ script:
 # push image
 - >
   if [ "$TRAVIS_BRANCH" == "master" ] && [ "$TRAVIS_PULL_REQUEST" == "false" ]; then
-    docker login -u="$DOCKER_USER" -p="$DOCKER_PASS"
+    echo "$DOCKER_PASS" | docker login -u "$DOCKER_USER" --password-stdin
     docker push bluemoomba/rasp-elasticsearch
   fi
